--- a/config.yaml
+++ b/config.yaml
@@ -27,6 +27,7 @@ rna_polymerases:
       - U6
       - U6atac
       - tRNAsec
+      - snoRNAMe18SA1806
 
 # Default e-value thresholds for each RNA type
 evalues:
@@ -46,6 +47,7 @@ evalues:
   U11: 1e-5
   U12: 1e-8
   tRNAsec: 1e-10
+  snoRNAMe18SA1806: 1e+5
 
 # Genes to exclude for specific taxonomic groups
 exclude_genes:
@@ -70,10 +72,21 @@ low_complexity:
 # BLAST query names mapping (filename -> gene name for GFF3)
 blast_queries:
   noeCR34335: noeCR34335
+  snoRNAMe18SA1806: snoRNAMe18SA1806
 
 # Promoter annotation settings by taxonomic group
-# Applied in order from most specific to least specific (species > genus > family > order > class)
+# Applied in order from most specific to least specific (species > genus > family > order > suborder > infraorder > class)
 promoter_annotation:
+  # Infraorder-level settings
+  Muscomorpha:
+    kmers:
+      - AATTCTCA
+
+  # Suborder-level settings
+  Glossata:
+    kmers:
+      - ATCGCG
+
   # Family-level settings
   Drosophilidae:
     kmers:
